[package]
name = "hexv"
version = "0.3.1"
authors = ["Linus789"]
edition = "2018"
description = "View text with hex values"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Linus789/hexv"
categories = ["command-line-utilities"]

[dependencies]
clap = "3.0.0-beta.4"
bstr = "0.2.16"
ab_glyph = "0.2.11"
fontdb = "0.6.2"
atty = "0.2.14"