[package]
name = "hexv"
version = "0.4.0"
authors = ["Linus789"]
edition = "2021"
description = "View text with hex values"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Linus789/hexv"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
bstr = "1.10"
ab_glyph = "0.2"
fontdb = "0.21"
